--- a/src/app/pages/browse/browse.component.html
+++ b/src/app/pages/browse/browse.component.html
@@ -1,13 +1,57 @@
 
 
-
-
-    <app-header></app-header>
-      
    
 
+     <app-header></app-header> 
+      
+   <section>
+    <div class=' contenedor'>
+        <div class="peliculas">
+          <img src="https://hips.hearstapps.com/hmg-prod/images/x-men-apocalipsis-1558963086.jpg?crop=1xw:1xh;center,top&resize=980:*" alt="Pelicula">
+        </div>
+       <div class="pie">
+        <h2>Xmen Apocalipsis</h2>
+        <p>Esta película tiene lugar en los años 80, y es fruto de esa LÍNEA TEMPORAL B, ya que Lobezno está retenido por William Stryker, aunque los jóvenes de la Patrulla acaban liberándolo por error. La pena es que Oscar Isaac no guarda un buen recuerdo de aquello.</p>
+        <a href="https://www.youtube.com/watch?v=TBZjPqYty8E" target="_blank" class="button">Ver Trailer</a>
+      </div>
+    </div>
+
+    <div class=' contenedor'>
+      <div class="peliculas">
+        <img src="https://hips.hearstapps.com/hmg-prod/images/deadpool-1558962411.jpg?crop=1xw:1xh;center,top&resize=980:*" alt="Pelicula">
+      </div>
+     <div class="pie">
+      <h2>Dead Pool</h2>
+      <p>'Deadpool', que ya forma parte del Universo Cinematográfico Marvel, transcurre, por lo que vemos en pantalla, en los 2010's. Aunque se hacen chistes sobre ello, no está muy clara la línea temporal a la que pertenece, pero suponemos que, como no hay rastro de los Centinelas, es parte de esa LÍNEA TEMPORAL B, ya que los Centinelas han desaparecido y no se caza a los mutantes. Al menos, no con robots gigantes.</p>
+      <a href="https://www.youtube.com/watch?v=0JnRdfiUMa8" target="_blank" class="button">Ver Trailer</a>
+     </div>
+  </div>
+
+ <div class=' contenedor'>
+  <div class="peliculas">
+    <img src="https://hips.hearstapps.com/hmg-prod/images/poster-deadpool-lobezno-1-66267d3887108.jpg?crop=1xw:1xh;center,top&resize=980:*" alt="Pelicula">
+  </div>
+ <div class="pie">
+  <h2>Deadpool & Wolverine</h2>
+  <p>Con un sorprendente anuncio, Ryan Reynolds y Hugh Jackman anunciaron el regreso de Lobezno para la tercera entrega de Deadpool, primera en el MCU de Disney, de Deadpool. También, y esto nos facilitó el trabajo, no tardaron en asegurar que los eventos de 'Logan' no cambiarán, y que siguen siendo canónicos.</p>
+  <a href="https://www.youtube.com/watch?v=uDzfa0w86Vw" target="_blank" class="button">Ver Trailer</a>
+</div>
+</div>
+
+<div class=' contenedor'>
+<div class="peliculas">
+  <img src="https://hips.hearstapps.com/hmg-prod/images/logan-1558962413.jpg?crop=1xw:1xh;center,top&resize=980:*" alt="Pelicula">
+</div>
+<div class="pie">
+<h2>Logan</h2>
+<p>Ambientada en 2029, esta película existe en una línea temporal totalmente ajena a las otras dos... a la que podríamos llamar LÍNEA TEMPORAL HOMENAJE. Me explico:
+
+  . No es parte de la LÍNEA TEMPORAL A, ya que en 'Días del Futuro Pasado' se nos cuenta que los mutantes han sido prácticamente exterminados por los Centinelas, pero en 'Logan', el responsable ha sido Charles Xavier, y años después de lo que vemos en 'Días del Futuro Pasado'.</p>
+  <a href="https://www.youtube.com/watch?v=atu1yOOXIz0" target="_blank" class="button">Ver Trailer</a>
+</div>
+</div>
 
 
-
+</section>
 
  
